--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     </div>
 
     <script>
-        const GITHUB_USERNAME = 'foretpzs';
-        const GITHUB_REPO = 'Bobbank'; 
+        const GITHUB_USERNAME = 'Forretpw';
+        const GITHUB_REPO = 'BWR'; 
         let allArticles = [];
 
         // --- DYNAMIC FORM LOGIC ---
