--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 
     <script>
         // CONFIGURE THESE
-        const GITHUB_USERNAME = 'foretpzs';
-        const GITHUB_REPO = 'Bobbank';
+        const GITHUB_USERNAME = 'Forretpw';
+        const GITHUB_REPO = 'BWR';
 
         let allItems = [];
 
