--- a/jysk.html
+++ b/jysk.html
@@ -18,7 +18,7 @@
             margin: 0 auto;
             background-color: #0d1117;
             padding: 30px;
-            border-radius: 10px;
+            border-radius: 5px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
         }
         h1, h2 {
@@ -70,32 +70,32 @@
     <div class="jysk-container">
         <h1>JYSK Fillial at Bobertovo (JYSK.BV)</h1>
         <p class="address">📍 Address: 15 часть Ocean ut адрес</p>
-        <p>Welcome to your local JYSK Bobertovo branch, offering Scandinavian style and quality products for your home and office!</p>
+        <p>JYSK Bobertovo - Scandinavian style and quality products for your home and office</p>
 
         <h2>Furniture 🛋️</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="[Table Image Link]" alt="Table" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/25pXHh3y/image.png" alt="Table" title="Replace this text with the actual image link">
                 <div class="product-name">Table</div>
                 <div class="product-price">35 Euro</div>
             </div>
             <div class="product-card">
-                <img src="[Chair Image Link]" alt="Chair" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/25pXHh3y/image.png" alt="Chair" title="Replace this text with the actual image link">
                 <div class="product-name">Chair</div>
                 <div class="product-price">15 Euro</div>
             </div>
             <div class="product-card">
-                <img src="[Dual Bed Image Link]" alt="Dual Bed" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/bNwXbx2Y/image.png" alt="Dual Bed" title="Replace this text with the actual image link">
                 <div class="product-name">Dual Bed</div>
                 <div class="product-price">65 Euro</div>
             </div>
             <div class="product-card">
-                <img src="[Barrel Image Link]" alt="Barrel" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/vTDz8ZDj/image.png" alt="Barrel" title="Replace this text with the actual image link">
                 <div class="product-name">Barrel</div>
                 <div class="product-price">15 Euro</div>
             </div>
             <div class="product-card">
-                <img src="[Book Shelf Image Link]" alt="Book Shelf" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/vTDz8ZDj/image.png" alt="Book Shelf" title="Replace this text with the actual image link">
                 <div class="product-name">Book Shelf</div>
                 <div class="product-price">20 Euro</div>
             </div>
@@ -104,17 +104,17 @@
         <h2>Decorative Items ✨</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="[Christmas Tree Image Link]" alt="Christmas Tree" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/hjt8Mt87/image.png" alt="Christmas Tree" title="Replace this text with the actual image link">
                 <div class="product-name">Christmas Tree</div>
                 <div class="product-price">99 Euro</div>
             </div>
             <div class="product-card">
-                <img src="[Candle Image Link]" alt="Candle" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/25pXHh3y/image.png" alt="Candle" title="Replace this text with the actual image link">
                 <div class="product-name">Candle</div>
                 <div class="product-price">5 Euro</div>
             </div>
             <div class="product-card">
-                <img src="[Picture Image Link]" alt="Picture" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/hvJLWZ5L/image.png" alt="Picture" title="Replace this text with the actual image link">
                 <div class="product-name">Picture (Varies)</div>
                 <div class="product-price">9 - 14 Euro</div>
             </div>
@@ -123,12 +123,12 @@
         <h2>Electronics 🔌</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="[Refrigerator Image Link]" alt="LG French Door Refrigerator" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/PJq6LMVF/image.png" alt="LG French Door Refrigerator" title="Replace this text with the actual image link">
                 <div class="product-name">Lg French Door Refrigerator</div>
                 <div class="product-price">259 Euro</div>
             </div>
             <div class="product-card">
-                <img src="[Soundplayer Image Link]" alt="Soundplayer" title="Replace this text with the actual image link">
+                <img src="https://i.postimg.cc/PJq6LMVF/image.png" alt="Soundplayer" title="Replace this text with the actual image link">
                 <div class="product-name">Soundplayer</div>
                 <div class="product-price">20 Euro</div>
             </div>
