--- a/index.html
+++ b/index.html
@@ -82,13 +82,7 @@
 
             <!-- Wikipedia Section -->
             <section id="wiki-section" class="content-section">
-                <div class="under-construction">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M12 9v4m0 4h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"></path>
-                    </svg>
-                    <h2>В разработке</h2>
-                    <p>Wikipedia раздел скоро будет доступен</p>
-                </div>
+                <iframe src="wikipedia.html" class="content-frame"></iframe>
             </section>
 
             <!-- Find Job Section -->
