--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
 
             <!-- Rent Office Section -->
             <section id="rentoffice-section" class="content-section">
-                <iframe src="marketplace.html#estate" class="content-frame"></iframe>
+                <div class="under-construction">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 9v4m0 4h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"></path>
+                    </svg>
+                    <h2>В разработке</h2>
+                    <p>раздел Аренда Офисов скоро будет доступен</p>
+                </div>
             </section>
 
             <!-- Sites Section -->
