--- a/bocar.html
+++ b/bocar.html
@@ -149,9 +149,9 @@
         }
         
         /* Placeholder for images. Change the src in the final version */
-        .car-image[data-car="passat"] { content: url('https://via.placeholder.com/600x400/202020/e0e0e0?text=VW+Passat+Black'); }
-        .car-image[data-car="crv"] { content: url('https://via.placeholder.com/600x400/404040/e0e0e0?text=Honda+CR-V+Grey'); }
-        .car-image[data-car="corolla"] { content: url('https://via.placeholder.com/600x400/303030/e0e0e0?text=Toyota+Corolla+Cross'); }
+        .car-image[data-car="passat"] { content: url('https://i.postimg.cc/D0nN0Lcc/image.png'); }
+        .car-image[data-car="crv"] { content: url('https://i.postimg.cc/rFYhXv7j/image.png'); }
+        .car-image[data-car="corolla"] { content: url('https://i.postimg.cc/y8ZTqWmH/image.png'); }
 
 
         .car-content {
