--- a/bocar.html
+++ b/bocar.html
@@ -330,7 +330,7 @@
     </section>
 
     <footer class="footer">
-        &copy; 2025 Bobertovo Car Dealership. Все права защищены.
+        &copy; Bobertovo Car Dealership.
     </footer>
 
 </body>
