--- a/bocar.html
+++ b/bocar.html
@@ -149,9 +149,9 @@
         }
         
         /* Placeholder for images. Change the src in the final version */
-        .car-image[data-car="passat"] { content: url('https://i.postimg.cc/D0nN0Lcc/image.png'); }
-        .car-image[data-car="crv"] { content: url('https://i.postimg.cc/rFYhXv7j/image.png'); }
-        .car-image[data-car="corolla"] { content: url('https://i.postimg.cc/y8ZTqWmH/image.png'); }
+        .car-image[data-car="passat"] { content: url('https://i.postimg.cc/ht1NFCbc/image.png'); }
+        .car-image[data-car="crv"] { content: url('https://i.postimg.cc/BQWzjWmf/image.png'); }
+        .car-image[data-car="corolla"] { content: url('https://i.postimg.cc/1zYCPb8B/image.png'); }
 
 
         .car-content {
