--- a/bocar.html
+++ b/bocar.html
@@ -296,7 +296,7 @@
 <body>
 
     <header class="header">
-        <div class="logo">Bobertovo Motors</div>
+        <div class="logo">Bobertovo Car Dealership</div>
         <nav class="nav">
             <a href="#inventory">Автомобили</a>
             <a href="#services">Услуги</a>
